Creando campo de busqueda

--- a/css/page.css
+++ b/css/page.css
@@ -13,6 +13,9 @@
 .page .sidebar{
     grid-area: sidebar;
     border: solid 10px red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .page .calendar{
