--- a/css/page.css
+++ b/css/page.css
@@ -12,10 +12,10 @@
 
 .page .sidebar{
     grid-area: sidebar;
-    border: solid 10px red;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 1.5rem;
 }
 
 .page .calendar{
