--- a/css/search.css
+++ b/css/search.css
@@ -4,6 +4,7 @@
     justify-content: center;
     block-size: 2.5rem;
     background: var(--gray10);
+    border-radius: 0.25rem;
 }
 
 .search:hover,
@@ -18,6 +19,7 @@
     background: none;
     outline: none;
     line-height: 1.25rem;
+    font:var(--body1-regular) ;
 }
 
 .searchIcon{
@@ -25,7 +27,4 @@
     margin-inline-start: 1rem;
     margin-inline-end: 0.5rem;
     color: var(--gray50);
-
 }
-
-
