--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,6 @@
 @import "./search.css";
 @import "./checkList.css";
 @import "./sidebar.css";
+@import "./modal.css";
+@import "./input.css";
+@import "./create-task.css"
