Agregando Js del Modal

--- a/css/modal.css
+++ b/css/modal.css
@@ -1,5 +1,4 @@
 .modal{
-    display: flex;
     flex-direction: column;
     gap: 1.5rem;
     margin: initial;
@@ -13,6 +12,10 @@
     border-radius: 0.25rem;
     border: none;
     box-shadow: 0.08734026551246643px 2.5244154930114746px 7.496296405792236px 0px rgba(0, 0, 0, 0.07), 0.4128812551498413px 11.933600425720215px 29.30370330810547px 0px rgba(0, 0, 0, 0.04), 1.0719032287597656px 30.981462478637695px 92px 0px rgba(0, 0, 0, 0.03);;
+}
+
+.modal[open]{
+    display: flex;
 }
 
 .modal::backdrop{
