--- a/css/global.css
+++ b/css/global.css
@@ -22,4 +22,15 @@
 body {
     font: var(--body1-regular);
     margin: 0;
+    color: var(--gray50);
+    background: var(--white);
+}
+
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --gray50:#fffffe;
+        --gray20: #70757a;
+        --white: #222222;
+    }
 }
